// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getAssistsStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 100,
    "primaryText": 34,
    "teamTricode": "PHX",
  },
  "homeTeam": Object {
    "percentage": 91.17647058823529,
    "primaryText": 31,
    "teamTricode": "NOP",
  },
  "label": "Assists",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getBlocksStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 100,
    "primaryText": 5,
    "teamTricode": "PHX",
  },
  "homeTeam": Object {
    "percentage": 60,
    "primaryText": 3,
    "teamTricode": "NOP",
  },
  "label": "Blocks",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getDefReboundsStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 63.888888888888886,
    "primaryText": 23,
    "teamTricode": "PHX",
  },
  "homeTeam": Object {
    "percentage": 100,
    "primaryText": 36,
    "teamTricode": "NOP",
  },
  "label": "Defensive Rebounds",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getFastBreakPtsStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 62.5,
    "primaryText": 5,
    "teamTricode": "PHX",
  },
  "homeTeam": Object {
    "percentage": 100,
    "primaryText": 8,
    "teamTricode": "NOP",
  },
  "label": "Fast Break Points",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getFieldGoalStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 46.6666666666667,
    "primaryText": "49/105",
    "secondaryText": "46.7%",
    "teamTricode": "PHX",
  },
  "homeTeam": Object {
    "percentage": 58.1395348837209,
    "primaryText": "50/86",
    "secondaryText": "58.1%",
    "teamTricode": "NOP",
  },
  "label": "Field Goals",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getFreeThrowStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 76.4705882352941,
    "primaryText": "13/17",
    "secondaryText": "76.5%",
    "teamTricode": "PHX",
  },
  "homeTeam": Object {
    "percentage": 75,
    "primaryText": "21/28",
    "secondaryText": "75.0%",
    "teamTricode": "NOP",
  },
  "label": "Free Throws",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getOffReboundsStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 100,
    "primaryText": 19,
    "teamTricode": "PHX",
  },
  "homeTeam": Object {
    "percentage": 36.84210526315789,
    "primaryText": 7,
    "teamTricode": "NOP",
  },
  "label": "Offensive Rebounds",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getPtsOffTurnoversStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 92.5925925925926,
    "primaryText": 25,
    "teamTricode": "PHX",
  },
  "homeTeam": Object {
    "percentage": 100,
    "primaryText": 27,
    "teamTricode": "NOP",
  },
  "label": "Points Off Turnovers",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getReboundsStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 97.67441860465115,
    "primaryText": 42,
    "teamTricode": "PHX",
  },
  "homeTeam": Object {
    "percentage": 100,
    "primaryText": 43,
    "teamTricode": "NOP",
  },
  "label": "Total Rebounds",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getStealsStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 70,
    "primaryText": 7,
    "teamTricode": "PHX",
  },
  "homeTeam": Object {
    "percentage": 100,
    "primaryText": 10,
    "teamTricode": "NOP",
  },
  "label": "Steals",
}
`;

exports[`pages/GameDetails/Summary/TeamComparison/TeamComparison.utils getThreePtStats should return object that matches snapshot 1`] = `
Object {
  "awayTeam": Object {
    "percentage": 34.2105263157895,
    "primaryText": "13/38",
    "secondaryText": "34.2%",
    "teamTricode": "PHX",
  },
  "homeTeam": Object {
    "percentage": 32,
    "primaryText": "8/25",
    "secondaryText": "32.0%",
    "teamTricode": "NOP",
  },
  "label": "3-Pointers",
}
`;
